--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -10,3 +10,5 @@ sql:
         sql_package: "pgx/v5"
         emit_json_tags: true
         emit_interface: true # Crucial: Generates the Querier interface for mocking
+        emit_pointers_for_null_types: true
+        
